--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCType html>
 <html>
-<head><title>software as a hobby</titile></head>
+<head><title>software as a hobby</title></head>
 <body>
 	<strong>WIP</strong>
 </body>
